# pyblerpcclient

./: .gitignore  LICENSE  README.md  pyproject.toml
ble_rpc_client/: brpc.py  brpc_calls.py  brpc_fun_names.json  bt_defs.py  btstack_sync.py  gatt_client_util.py  log.py  sig_uuid.py
ble_rpc_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: constants.py  implicitsend_server.py  implicitsend_test.py  pts.py  pts_gap.py  shell.py  thermo_client.py
