[project]
name = "ble_rpc_client"
version = "0.0.1"
authors = [
  { name="SW", email="sw@ingchips.com" },
]
description = "Python BLE RPC Client"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ingchips/pyblerpcclient"
"Bug Tracker" = "https://github.com/ingchips/pyblerpcclient/issues"